[package]
name = "grpc_mock_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-stream = "0.1"
async-stream = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.1"

[build-dependencies]
tonic-build = "*"
